Afegit teoria a topologia, copacitat

--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -510,7 +510,7 @@
 				\label{lema:continuitat respecte les condicions inicials:eq1}
 				\norm{\varphi_{n_{N}}-\varphi}\geq\varepsilon
 			\end{equation}
-			per a tot \(N\) natural. Ara bé, pel Teorema d'\myref{thm:Teorema de Arzelà-Ascoli} la successió \((\varphi_{n_{N}})_{N\in\mathbb{N}}\) té una parcial uniformement convergent, que contradiu \eqref{lema:continuitat respecte les condicions inicials:eq1}. Per tant tenim que la successió \((\varphi_{n})\) convergeix uniformement a \(\varphi\).
+			per a tot \(N\) natural. Ara bé, pel \myref{thm:Teorema de Arzelà-Ascoli} la successió \((\varphi_{n_{N}})_{N\in\mathbb{N}}\) té una parcial uniformement convergent, que contradiu \eqref{lema:continuitat respecte les condicions inicials:eq1}. Per tant tenim que la successió \((\varphi_{n})\) convergeix uniformement a \(\varphi\).
 		\end{proof}
 	\end{lemma}
 	\begin{definition}[Convergència uniforme sobre compactes]
