Afegida teoria i exemples a topologia fins a haver demostrat els tres resultats importants de compacitat.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -147,9 +147,9 @@
 \newcommand{\obert}[1]{\mathcal{#1}}
 \newcommand{\tancat}[1]{\obert{#1}}
 \newcommand{\base}[1]{\mathcal{#1}}
-\newcommand{\diff}{\textrm{d}}
-\newcommand{\e}{\textrm{e}}
-\newcommand{\iu}{\textrm{i}}
+\newcommand{\diff}{\mathrm{d}}
+\newcommand{\e}{\mathrm{e}}
+\newcommand{\iu}{\mathrm{i}}
 \newcommand{\uppi}{\pi} % REVISIT
 
 %\setcounter{chapter}{-1}
