--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1793,7 +1793,7 @@
 		\begin{proof}
 			Per la definició de \myref{def:classe d'equivalència} tenim que
 			\[(a,b)\sim(1,1),\]
-			i per la definició de \myref{def:nombres enters} això és
+			si i només si, per la definició de \myref{def:nombres enters}, tenim
 			\[a\cdot1=b\cdot1.\]
 			I per tant, per la proposició \ref{prop:Z és un anell} trobem que ha de ser \(a=b\).
 		\end{proof}
@@ -1827,7 +1827,7 @@
 			\item\label{enum:prop:Q és un grup abelià 1}
 			\(\frac{a}{b}+\frac{c}{d}=\frac{c}{d}+\frac{a}{b}\).
 			\item\label{enum:prop:Q és un grup abelià 2}
-			\(\frac{a}{b}+\left(\frac{c}{d}+\frac{e}{f}\right)=\left(\frac{a}{b}+\frac{c}{d}\right)+\frac{e}{f}\).
+			\(\frac{a}{b}+\Big(\frac{c}{d}+\frac{e}{f}\Big)=\Big(\frac{a}{b}+\frac{c}{d}\Big)+\frac{e}{f}\).
 			\item\label{enum:prop:Q és un grup abelià 3}
 			\(\frac{a}{b}+\frac{0}{1}=\frac{a}{b}\).
 			\item\label{enum:prop:Q és un grup abelià 4}
